Bug-fix: remove `width: 100vw` from body to remove y  scrollbar.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,7 +69,6 @@ a {
 }
 
 body {
-  width: 100vw;
   height: 100vh;
   font-family: var(--font);
   text-transform: lowercase;
